shit.txt
code_gen.cpp: In function ‘llvm::ConstantFP* c_real(long double)’:
code_gen.cpp:45:47: error: call of overloaded ‘APFloat(long double&)’ is ambiguous
   return ConstantFP::get(TheContext, APFloat(n));
                                               ^
In file included from /usr/local/include/llvm/IR/Constants.h:23:0,
                 from /usr/local/include/llvm/IR/ConstantFolder.h:20,
                 from /usr/local/include/llvm/IR/IRBuilder.h:24,
                 from code_gen.cpp:7:
/usr/local/include/llvm/ADT/APFloat.h:870:3: note: candidate: llvm::APFloat::APFloat(llvm::APFloat&&)
   APFloat(APFloat &&RHS) = default;
   ^~~~~~~
/usr/local/include/llvm/ADT/APFloat.h:869:3: note: candidate: llvm::APFloat::APFloat(const llvm::APFloat&)
   APFloat(const APFloat &RHS) = default;
   ^~~~~~~
/usr/local/include/llvm/ADT/APFloat.h:868:12: note: candidate: llvm::APFloat::APFloat(float)
   explicit APFloat(float f) : U(IEEEFloat(f), IEEEsingle()) {}
            ^~~~~~~
/usr/local/include/llvm/ADT/APFloat.h:867:12: note: candidate: llvm::APFloat::APFloat(double)
   explicit APFloat(double d) : U(IEEEFloat(d), IEEEdouble()) {}
            ^~~~~~~
code_gen.cpp: In function ‘llvm::Value* code_gen(ast*, PclType)’:
code_gen.cpp:243:15: warning: unused variable ‘p’ [-Wunused-variable]
  SymbolEntry *p, *p1;
               ^
code_gen.cpp:243:19: warning: unused variable ‘p1’ [-Wunused-variable]
  SymbolEntry *p, *p1;
                   ^~
code_gen.cpp:244:10: warning: unused variable ‘head’ [-Wunused-variable]
     ast *head, *head1;
          ^~~~
code_gen.cpp:244:17: warning: unused variable ‘head1’ [-Wunused-variable]
     ast *head, *head1;
                 ^~~~~
code_gen.cpp:245:13: warning: unused variable ‘tp’ [-Wunused-variable]
     PclType tp;
             ^~
code_gen.cpp:246:14: warning: unused variable ‘pass_type’ [-Wunused-variable]
     PassMode pass_type;
              ^~~~~~~~~
code_gen.cpp: In function ‘void generate_code(ast*)’:
code_gen.cpp:435:9: warning: unused variable ‘ret’ [-Wunused-variable]
  Value *ret = code_gen(t, NULL);
         ^~~
